First_Step/data/45/126/grade_comments.txt
-The compilation or preparation of execution has failed
Executable.java:20: error: cannot find symbol
        tab.sortBubble();
        ^
  symbol:   variable tab
  location: class Executable
Executable.java:21: error: cannot find symbol
        return (tab);
                ^
  symbol:   variable tab
  location: class Executable
Executable.java:21: error: illegal start of type
        return (tab);
               ^
3 errors
Not compiled
